<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    app:title="@string/About"
    app:subtitle=""
    android:id="@+id/toolbar_about"
    app:navigationIcon="@drawable/ic_back">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <dev.oneuiproject.oneui.widget.Separator
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/RM" />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:gravity="center">
                   <ImageView
                       android:padding="15dp"
                       android:id="@+id/telegram_logo"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/ic_logo"/>
                   <ImageView
                       android:id="@+id/github_logo"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:padding="15dp"
                       android:src="@drawable/ic_iconmonstr_github_1"/>

               </LinearLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="11sp"
                   android:paddingHorizontal="15dp"
                   android:textColor="?android:textColorPrimary"
                   android:text="@string/Info"/>
           </LinearLayout>

           <dev.oneuiproject.oneui.widget.Separator
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/ST"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="24dp"
            android:elevation="10dp"
            android:background="@color/cardView"
            android:backgroundTint="@color/cardView">

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Yanndroid"
                android:textColor="?android:textColorPrimary"
                android:textStyle="italic"
                android:textSize="20sp"/>

        </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardUseCompatPadding="true"
               app:cardCornerRadius="24dp"
               android:elevation="10dp"
               android:background="@color/cardView"
               android:backgroundTint="@color/cardView">

               <TextView
                   android:padding="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/BlackMesa"
                   android:textColor="?android:textColorPrimary"
                   android:textStyle="italic"
                   android:textSize="20sp"/>

           </androidx.cardview.widget.CardView>
       </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</dev.oneuiproject.oneui.layout.ToolbarLayout>